--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,7 @@
         <java.version>1.8</java.version>
         <junit.jupiter.version>5.0.3</junit.jupiter.version>
         <junit.platform.version>1.0.3</junit.platform.version>
+        <log4j.version>2.10.0</log4j.version>
         <hibernate.version>5.2.12.Final</hibernate.version>
         <jdbc-connecter.version>5.1.45</jdbc-connecter.version>
     </properties>
@@ -43,6 +44,17 @@
             <version>${junit.jupiter.version}</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-core</artifactId>
+            <version>${log4j.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-api</artifactId>
+            <version>${log4j.version}</version>
+        </dependency>
+
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
