--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,9 @@
+#Https config
+server.port=8443
+server.ssl.key-store=classpath:tomcat.keystore
+server.ssl.key-store-password=phsspassword
+server.ssl.key-password=phsspassword
+
 #Datasource config
 spring.datasource.url=jdbc:mysql://localhost:3306/protogalaxy?useSSL=true
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
