--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 #Https config
-server.port=8443
-server.ssl.key-store=classpath:tomcat.keystore
-server.ssl.key-store-password=phsspassword
-server.ssl.key-password=phsspassword
+server.port=8080
+#server.ssl.key-store=classpath:tomcat.keystore
+#server.ssl.key-store-password=phsspassword
+#server.ssl.key-password=phsspassword
 
 #Datasource config
 spring.datasource.url=jdbc:mysql://localhost:3306/protogalaxy?useSSL=true
@@ -22,3 +22,7 @@ spring.jpa.show-sql=true
 
 #Data REST config
 spring.data.rest.base-path=/rest
+
+#Server config
+spring.servlet.multipart.max-file-size=51200MB
+spring.servlet.multipart.max-request-size=51200MB
