Project update from Earth，data structure updated ,metadata service finished,register&caching service need to update

--- a/pom.xml
+++ b/pom.xml
@@ -38,9 +38,9 @@
 
     <dependencies>
         <dependency>
-            <groupId>org.bytedeco.javacpp-presets</groupId>
-            <artifactId>ffmpeg-platform</artifactId>
-            <version>3.4.2-1.4.1</version>
+            <groupId>org.bytedeco</groupId>
+            <artifactId>javacv-platform</artifactId>
+            <version>1.4.1</version>
         </dependency>
         <!--Spring boot section -->
         <dependency>
