--- a/pom.xml
+++ b/pom.xml
@@ -25,11 +25,12 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.0.1.RELEASE</version>
+        <version>2.0.2.RELEASE</version>
     </parent>
 
     <properties>
         <java.version>1.8</java.version>
+        <javacv.version>1.4.1</javacv.version>
         <junit.jupiter.version>5.1.0</junit.jupiter.version>
         <junit.platform.version>1.1.0</junit.platform.version>
         <jackson-datatype-hibernate.version>2.9.5</jackson-datatype-hibernate.version>
@@ -40,7 +41,7 @@
         <dependency>
             <groupId>org.bytedeco</groupId>
             <artifactId>javacv-platform</artifactId>
-            <version>1.4.1</version>
+            <version>${javacv.version}</version>
         </dependency>
         <!--Spring boot section -->
         <dependency>
