--- a/.gitignore
+++ b/.gitignore
@@ -52,7 +52,7 @@ Temporary Items
 ### JetBrains template
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio and Webstorm
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
-
+.idea
 # User-specific stuff:
 .idea/**/workspace.xml
 .idea/**/tasks.xml
@@ -124,3 +124,6 @@ $RECYCLE.BIN/
 # Windows shortcuts
 *.lnk
 
+#Phss file resource
+/phssStorage/
+/phssTemp/
