Update from earth, daily sync

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,8 +17,8 @@ spring.datasource.hikari.minimum-idle=5
 #Hibernate config
 spring.jpa.database-platform=org.hibernate.dialect.MySQL57InnoDBDialect
 spring.jpa.show-sql=true
-#spring.jpa.generate-ddl=true
-#spring.jpa.hibernate.ddl-auto=create
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=create
 
 #Data REST config
 spring.data.rest.base-path=/rest
