Update from earth, daily sync

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 #Https config
 server.port=8080
-#server.ssl.key-store=classpath:tomcat.keystore
+#server.ssl.key-store=classpath:phss.keystore
 #server.ssl.key-store-password=phsspassword
 #server.ssl.key-password=phsspassword
 
