--- a/pom.xml
+++ b/pom.xml
@@ -31,13 +31,16 @@
     <properties>
         <java.version>1.8</java.version>
         <spring-hateoas.version>0.24.0.RELEASE</spring-hateoas.version>
+        <spring-restdocs.version>2.0.1.RELEASE</spring-restdocs.version>
         <javacv.version>1.4.1</javacv.version>
-        <junit.jupiter.version>5.1.0</junit.jupiter.version>
-        <junit.platform.version>1.1.0</junit.platform.version>
-        <jdbc-connector.version>5.1.46</jdbc-connector.version>
+        <java-jwt.version>3.4.0</java-jwt.version>
+        <junit-jupiter.version>5.3.0-M1</junit-jupiter.version>
+        <junit-platform.version>1.3.0-M1</junit-platform.version>
+        <jdbc-connector.version>8.0.11</jdbc-connector.version>
     </properties>
 
     <dependencies>
+        <!--JavaCV-->
         <dependency>
             <groupId>org.bytedeco</groupId>
             <artifactId>javacv-platform</artifactId>
@@ -88,7 +91,7 @@
         <dependency>
             <groupId>com.auth0</groupId>
             <artifactId>java-jwt</artifactId>
-            <version>3.3.0</version>
+            <version>${java-jwt.version}</version>
         </dependency>
 
 
@@ -103,7 +106,7 @@
         <dependency>
             <groupId>org.springframework.restdocs</groupId>
             <artifactId>spring-restdocs-mockmvc</artifactId>
-            <version>2.0.1.RELEASE</version>
+            <version>${spring-restdocs.version}</version>
             <scope>test</scope>
         </dependency>
         <!--Test section -->
@@ -114,29 +117,23 @@
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-engine</artifactId>
-            <version>${junit.jupiter.version}</version>
+            <version>${junit-jupiter.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-params</artifactId>
-            <version>${junit.jupiter.version}</version>
+            <version>${junit-jupiter.version}</version>
         </dependency>
         <dependency>
             <groupId>org.junit.platform</groupId>
             <artifactId>junit-platform-surefire-provider</artifactId>
-            <version>${junit.platform.version}</version>
+            <version>${junit-platform.version}</version>
         </dependency>
         <dependency>
             <groupId>org.junit.vintage</groupId>
             <artifactId>junit-vintage-engine</artifactId>
-            <version>${junit.jupiter.version}</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>4.12</version>
+            <version>${junit-jupiter.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
