--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,7 @@
         <junit-jupiter.version>5.3.0-M1</junit-jupiter.version>
         <junit-platform.version>1.3.0-M1</junit-platform.version>
         <jdbc-connector.version>5.1.46</jdbc-connector.version>
+        <docx4j.version>6.0.0</docx4j.version>
     </properties>
 
     <dependencies>
@@ -64,6 +65,12 @@
             <groupId>org.bytedeco</groupId>
             <artifactId>javacv-platform</artifactId>
             <version>${javacv.version}</version>
+        </dependency>
+        <!--docx4j-->
+        <dependency>
+            <groupId>org.docx4j</groupId>
+            <artifactId>docx4j</artifactId>
+            <version>${docx4j.version}</version>
         </dependency>
         <!--Spring boot section -->
         <dependency>
