--- a/pom.xml
+++ b/pom.xml
@@ -56,7 +56,7 @@
         <junit-jupiter.version>5.3.0-M1</junit-jupiter.version>
         <junit-platform.version>1.3.0-M1</junit-platform.version>
         <jdbc-connector.version>5.1.46</jdbc-connector.version>
-        <docx4j.version>6.0.0</docx4j.version>
+        <poi.version>3.17</poi.version>
     </properties>
 
     <dependencies>
@@ -66,11 +66,16 @@
             <artifactId>javacv-platform</artifactId>
             <version>${javacv.version}</version>
         </dependency>
-        <!--docx4j-->
+        <!--Apache POI-->
         <dependency>
-            <groupId>org.docx4j</groupId>
-            <artifactId>docx4j</artifactId>
-            <version>${docx4j.version}</version>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi</artifactId>
+            <version>${poi.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi-scratchpad</artifactId>
+            <version>${poi.version}</version>
         </dependency>
         <!--Spring boot section -->
         <dependency>
@@ -106,7 +111,6 @@
             <artifactId>java-jwt</artifactId>
             <version>${java-jwt.version}</version>
         </dependency>
-
 
         <!--MySQL connector section -->
         <dependency>
