Update from earth，document metadata reader word(.doc, .docx) part update，add Apache Tika support

--- a/pom.xml
+++ b/pom.xml
@@ -66,6 +66,17 @@
             <artifactId>javacv-platform</artifactId>
             <version>${javacv.version}</version>
         </dependency>
+        <!--Apache Tika-->
+        <dependency>
+            <groupId>org.apache.tika</groupId>
+            <artifactId>tika-core</artifactId>
+            <version>1.18</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.tika</groupId>
+            <artifactId>tika-parsers</artifactId>
+            <version>1.18</version>
+        </dependency>
         <!--Apache POI-->
         <dependency>
             <groupId>org.apache.poi</groupId>
