--- a/pom.xml
+++ b/pom.xml
@@ -48,15 +48,23 @@
     </parent>
 
     <properties>
-        <java.version>1.8</java.version>
+        <!--Metadata reader version-->
+        <javacv.version>1.4.1</javacv.version>
+        <apache-tika.version>1.18</apache-tika.version>
+        <apache-poi.version>3.17</apache-poi.version>
+        <apache-pdfbox.version>2.0.4</apache-pdfbox.version>
+        <sqlite-jdbc.version>3.23.1</sqlite-jdbc.version>
+        <jbig2-imageio.version>3.0.0</jbig2-imageio.version>
+        <jai-imageio-jpeg2000.version>1.3.0</jai-imageio-jpeg2000.version>
+        <!--Web plugins version-->
+        <java-jwt.version>3.4.0</java-jwt.version>
+        <!--Spring projects version-->
         <spring-hateoas.version>0.24.0.RELEASE</spring-hateoas.version>
         <spring-restdocs.version>2.0.1.RELEASE</spring-restdocs.version>
-        <javacv.version>1.4.1</javacv.version>
-        <java-jwt.version>3.4.0</java-jwt.version>
+        <!--Junit version-->
         <junit-jupiter.version>5.3.0-M1</junit-jupiter.version>
         <junit-platform.version>1.3.0-M1</junit-platform.version>
         <jdbc-connector.version>5.1.46</jdbc-connector.version>
-        <poi.version>3.17</poi.version>
     </properties>
 
     <dependencies>
@@ -70,28 +78,49 @@
         <dependency>
             <groupId>org.apache.tika</groupId>
             <artifactId>tika-core</artifactId>
-            <version>1.18</version>
+            <version>${apache-tika.version}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.tika</groupId>
             <artifactId>tika-parsers</artifactId>
-            <version>1.18</version>
+            <version>${apache-tika.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.xerial</groupId>
+            <artifactId>sqlite-jdbc</artifactId>
+            <version>${sqlite-jdbc.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.pdfbox</groupId>
+            <artifactId>jbig2-imageio</artifactId>
+            <version>${jbig2-imageio.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.github.jai-imageio</groupId>
+            <artifactId>jai-imageio-jpeg2000</artifactId>
+            <version>${jai-imageio-jpeg2000.version}</version>
         </dependency>
         <!--Apache POI-->
         <dependency>
             <groupId>org.apache.poi</groupId>
             <artifactId>poi</artifactId>
-            <version>${poi.version}</version>
+            <version>${apache-poi.version}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.poi</groupId>
             <artifactId>poi-ooxml</artifactId>
-            <version>${poi.version}</version>
+            <version>${apache-poi.version}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.poi</groupId>
             <artifactId>poi-scratchpad</artifactId>
-            <version>${poi.version}</version>
+            <version>${apache-poi.version}</version>
+        </dependency>
+        <!--Apache PDFBox-->
+        <dependency>
+            <groupId>org.apache.pdfbox</groupId>
+            <artifactId>pdfbox</artifactId>
+            <version>${apache-pdfbox.version}</version>
         </dependency>
         <!--Spring boot section -->
         <dependency>
