--- a/pom.xml
+++ b/pom.xml
@@ -49,7 +49,7 @@
 
     <properties>
         <!--Metadata reader version-->
-        <javacv.version>1.4.1</javacv.version>
+        <javacv.version>1.4.2</javacv.version>
         <apache-tika.version>1.18</apache-tika.version>
         <apache-poi.version>3.17</apache-poi.version>
         <apache-pdfbox.version>2.0.4</apache-pdfbox.version>
@@ -57,10 +57,12 @@
         <jbig2-imageio.version>3.0.0</jbig2-imageio.version>
         <jai-imageio-jpeg2000.version>1.3.0</jai-imageio-jpeg2000.version>
         <!--Web plugins version-->
+        <apache-ftpserver.version>1.1.1</apache-ftpserver.version>
+        <jupnp.version>2.3.0</jupnp.version>
         <java-jwt.version>3.4.0</java-jwt.version>
         <!--Spring projects version-->
         <spring-hateoas.version>0.24.0.RELEASE</spring-hateoas.version>
-        <spring-restdocs.version>2.0.1.RELEASE</spring-restdocs.version>
+        <spring-restdocs.version>2.0.2.RELEASE</spring-restdocs.version>
         <!--Junit version-->
         <junit-jupiter.version>5.3.0-M1</junit-jupiter.version>
         <junit-platform.version>1.3.0-M1</junit-platform.version>
@@ -156,8 +158,18 @@
             <artifactId>java-jwt</artifactId>
             <version>${java-jwt.version}</version>
         </dependency>
-
-        <!--MySQL connector section -->
+        <!-- Multimedia section
+        <dependency>
+            <groupId>org.apache.ftpserver</groupId>
+            <artifactId>ftpserver</artifactId>
+            <version>${apache-ftpserver.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.jupnp</groupId>
+            <artifactId>jupnp</artifactId>
+            <version>${jupnp.version}</version>
+        </dependency>
+        MySQL connector section -->
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
