--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,11 +4,14 @@ server.port=8080
 #server.ssl.key-store-password=phsspassword
 #server.ssl.key-password=phsspassword
 
-#Datasource config
+#Datasource JPA config
 spring.datasource.url=jdbc:mysql://localhost:3306/protogalaxy?useSSL=true
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.username=root
 spring.datasource.password=root
+#Datasource MongoDB config
+spring.data.mongodb.uri=mongodb://localhost:27017
+spring.data.mongodb.database=protogalaxy
 
 #Hikari config
 spring.datasource.hikari.maximum-pool-size=20
@@ -17,8 +20,8 @@ spring.datasource.hikari.minimum-idle=5
 #Hibernate config
 spring.jpa.database-platform=org.hibernate.dialect.MySQL57InnoDBDialect
 spring.jpa.show-sql=true
-#spring.jpa.generate-ddl=true
-#spring.jpa.hibernate.ddl-auto=create
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=create
 
 #Data REST config
 spring.data.rest.base-path=/rest
