Update from earth，daily update

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,5 +8,5 @@ server.port=8080
 spring.data.rest.base-path=/rest
 
 #Server config
-spring.servlet.multipart.max-file-size=51200MB
-spring.servlet.multipart.max-request-size=51200MB
+spring.servlet.multipart.max-file-size=5120MB
+spring.servlet.multipart.max-request-size=5120MB
