--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,10 @@
             <id>spring-releases</id>
             <url>https://repo.spring.io/libs-release</url>
         </repository>
+        <repository>
+            <id>psiegman-repo</id>
+            <url>https://github.com/psiegman/mvn-repo/raw/master/releases</url>
+        </repository>
     </repositories>
 
     <pluginRepositories>
@@ -53,6 +57,7 @@
         <apache-tika.version>1.18</apache-tika.version>
         <apache-poi.version>3.17</apache-poi.version>
         <apache-pdfbox.version>2.0.4</apache-pdfbox.version>
+        <epublib.version>3.1</epublib.version>
         <sqlite-jdbc.version>3.23.1</sqlite-jdbc.version>
         <jbig2-imageio.version>3.0.0</jbig2-imageio.version>
         <jai-imageio-jpeg2000.version>1.3.0</jai-imageio-jpeg2000.version>
@@ -165,6 +170,12 @@
             <groupId>com.auth0</groupId>
             <artifactId>java-jwt</artifactId>
             <version>${java-jwt.version}</version>
+        </dependency>
+        <!--Tool section-->
+        <dependency>
+            <groupId>nl.siegmann.epublib</groupId>
+            <artifactId>epublib-core</artifactId>
+            <version>${epublib.version}</version>
         </dependency>
         <!-- Multimedia section -->
         <dependency>
