Update from earth, OAuth2 login update, not completed

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 #Https config
-server.port=8080
-#server.ssl.key-store=classpath:phss.keystore
-#server.ssl.key-store-password=phsspassword
-#server.ssl.key-password=phsspassword
+server.port=8443
+server.ssl.key-store=classpath:phss.keystore
+server.ssl.key-store-password=phsspassword
+server.ssl.key-password=phsspassword
 
 #Data REST config
 spring.data.rest.base-path=/rest
