--- a/pom.xml
+++ b/pom.xml
@@ -201,9 +201,9 @@
             <version>${scribejava.version}</version>
         </dependency>
         <dependency>
-            <groupId>com.github.scribejava</groupId>
-            <artifactId>scribejava-httpclient-ning</artifactId>
-            <version>${scribejava.version}</version>
+            <groupId>org.asynchttpclient</groupId>
+            <artifactId>async-http-client</artifactId>
+            <version>2.6.0</version>
         </dependency>
         <!-- Multimedia tool section -->
         <dependency>
