Update from earth, metadata services update

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,7 @@ server.ssl.key-password=phsspassword
 #Server config
 spring.servlet.multipart.max-file-size=5120MB
 spring.servlet.multipart.max-request-size=5120MB
+
+#Data REST config
+spring.data.rest.base-path=/rest
+
