--- a/pom.xml
+++ b/pom.xml
@@ -48,14 +48,14 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.1.0.RELEASE</version>
+        <version>2.1.1.RELEASE</version>
     </parent>
 
     <properties>
         <!--Metadata reader version-->
         <javacv.version>1.4.3</javacv.version>
-        <apache-tika.version>1.19.1</apache-tika.version>
-        <apache-poi.version>4.0.0</apache-poi.version>
+        <apache-tika.version>1.20</apache-tika.version>
+        <apache-poi.version>4.0.1</apache-poi.version>
         <apache-pdfbox.version>2.0.12</apache-pdfbox.version>
         <epublib.version>3.1</epublib.version>
         <sqlite-jdbc.version>3.23.1</sqlite-jdbc.version>
@@ -67,10 +67,10 @@
         <java-jwt.version>3.4.0</java-jwt.version>
         <!--Spring projects version-->
         <spring-security.version>5.1.2.RELEASE</spring-security.version>
-        <spring-restdocs.version>2.0.2.RELEASE</spring-restdocs.version>
+        <spring-restdocs.version>2.0.3.RELEASE</spring-restdocs.version>
         <!--Junit version-->
-        <junit-jupiter.version>5.3.0-M1</junit-jupiter.version>
-        <junit-platform.version>1.3.0-M1</junit-platform.version>
+        <junit-jupiter.version>5.3.2</junit-jupiter.version>
+        <junit-platform.version>1.3.0</junit-platform.version>
         <jdbc-connector.version>5.1.47</jdbc-connector.version>
         <!--Tool version-->
         <scribejava.version>6.0.0</scribejava.version>
@@ -331,7 +331,7 @@
             </plugin>
             <plugin>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.22.0</version>
+                <version>3.0.0-M2</version>
                 <dependencies>
                     <dependency>
                         <groupId>org.junit.platform</groupId>
