--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>org.protogalaxy.phss</groupId>
     <artifactId>protogalaxy-core</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>0.1-ALPHA</version>
 
     <name>PHSS-Core</name>
     <description>Protogalaxy Home Server System is a server side software for the smart home project</description>
@@ -48,28 +48,27 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.1.1.RELEASE</version>
+        <version>2.1.3.RELEASE</version>
     </parent>
 
     <properties>
         <!--Metadata reader version-->
-        <javacv.version>1.4.3</javacv.version>
+        <javacv.version>1.4.4</javacv.version>
         <apache-tika.version>1.20</apache-tika.version>
         <apache-poi.version>4.0.1</apache-poi.version>
         <apache-pdfbox.version>2.0.12</apache-pdfbox.version>
         <epublib.version>3.1</epublib.version>
-        <sqlite-jdbc.version>3.23.1</sqlite-jdbc.version>
-        <jbig2-imageio.version>3.0.1</jbig2-imageio.version>
+        <sqlite-jdbc.version>3.27.2.1</sqlite-jdbc.version>
+        <jbig2-imageio.version>3.0.2</jbig2-imageio.version>
         <jai-imageio-jpeg2000.version>1.3.0</jai-imageio-jpeg2000.version>
         <!--Web plugins version-->
         <apache-ftpserver.version>1.1.1</apache-ftpserver.version>
         <java-jwt.version>3.4.0</java-jwt.version>
         <!--Spring projects version-->
-        <spring-security.version>5.1.2.RELEASE</spring-security.version>
+        <spring-security.version>5.1.4.RELEASE</spring-security.version>
         <spring-restdocs.version>2.0.3.RELEASE</spring-restdocs.version>
         <!--Junit version-->
-        <junit-jupiter.version>5.3.2</junit-jupiter.version>
-        <junit-platform.version>1.3.0</junit-platform.version>
+        <junit.jupiter.version>5.5.0-M1</junit.jupiter.version>
         <jdbc-connector.version>5.1.47</jdbc-connector.version>
         <!--Tool version-->
         <scribejava.version>6.0.0</scribejava.version>
@@ -240,29 +239,36 @@
         </dependency>
         <!--Test section -->
         <dependency>
-            <groupId>org.springframework.data</groupId>
-            <artifactId>spring-data-rest-hal-browser</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.junit.jupiter</groupId>
-            <artifactId>junit-jupiter-api</artifactId>
-            <version>${junit-jupiter.version}</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.junit.jupiter</groupId>
-            <artifactId>junit-jupiter-params</artifactId>
-            <version>${junit-jupiter.version}</version>
-        </dependency>
-        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
         <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-rest-hal-browser</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.springframework.security</groupId>
             <artifactId>spring-security-test</artifactId>
             <version>${spring-security.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-api</artifactId>
+            <version>${junit.jupiter.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-params</artifactId>
+            <version>${junit.jupiter.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-engine</artifactId>
+            <version>${junit.jupiter.version}</version>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 
@@ -325,24 +331,7 @@
             </plugin>
             <plugin>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>3.0.0-M2</version>
-                <dependencies>
-                    <dependency>
-                        <groupId>org.junit.platform</groupId>
-                        <artifactId>junit-platform-surefire-provider</artifactId>
-                        <version>${junit-platform.version}</version>
-                    </dependency>
-                    <dependency>
-                        <groupId>org.junit.jupiter</groupId>
-                        <artifactId>junit-jupiter-engine</artifactId>
-                        <version>${junit-jupiter.version}</version>
-                    </dependency>
-                    <dependency>
-                        <groupId>org.junit.vintage</groupId>
-                        <artifactId>junit-vintage-engine</artifactId>
-                        <version>${junit-jupiter.version}</version>
-                    </dependency>
-                </dependencies>
+                <version>3.0.0-M3</version>
             </plugin>
         </plugins>
     </build>
