Entities update, Spring Boot banner update

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,17 @@
-spring.main.allow-bean-definition-overriding=true
+spring.application.name = Protogalaxy Home Server System
+
+spring.main.allow-bean-definition-overriding = true
 
 #Https config
-server.port=8443
-server.ssl.key-store=classpath:phss.keystore
-server.ssl.key-store-password=phsspassword
-server.ssl.key-password=phsspassword
+server.port = 8443
+server.ssl.key-store = classpath:phss.keystore
+server.ssl.key-store-password = phsspassword
+server.ssl.key-password = phsspassword
 
 #Server config
-spring.servlet.multipart.max-file-size=5120MB
-spring.servlet.multipart.max-request-size=5120MB
+spring.servlet.multipart.max-file-size = 5120MB
+spring.servlet.multipart.max-request-size = 5120MB
 
 #Data REST config
-spring.data.rest.base-path=/rest
+spring.data.rest.base-path = /rest
 
