--- a/pom.xml
+++ b/pom.xml
@@ -229,6 +229,11 @@
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
             <version>${jdbc-connector.version}</version>
+    </dependency>
+        <dependency>
+            <groupId>org.flywaydb</groupId>
+            <artifactId>flyway-core</artifactId>
+            <version>5.2.4</version>
         </dependency>
         <!--Test Doc section -->
         <dependency>
