--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,6 +9,11 @@ server.port = 8080
 spring.servlet.multipart.max-file-size = 5120MB
 spring.servlet.multipart.max-request-size = 5120MB
 
+spring.flyway.locations=classpath:/db/migration/
+spring.flyway.user = root
+spring.flyway.password = root
+spring.flyway.url = jdbc:mysql://localhost:3306/protogalaxy?characterEncoding=utf8&useSSL=true
+
 #Data REST config
 spring.data.rest.base-path = /rest
 
